api/deployments/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lexure
  labels:
    name: lexure
    app: payment-watchdog
    environment: development
